[package]
name = "rust-diesel"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
# workspace = "../"

[dependencies]
log = "0.4.0"
env_logger = "0.5.13"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
